# learning-hub-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  alembic.ini  learning-hub-openclaw-plugin-spec.md  pyproject.toml  test_edupage_sync.py  test_grades_bonus.py  test_homeworks_weeks.py  test_mcp_tools.py
learning-hub-bridge/: index.ts  openclaw.plugin.json  package.json  tsconfig.json
migrations/: env.py
migrations/versions/: 03989f318419_add_family_members_and_gateways_tables_.py  03c9ac9396d6_rename_carryover_minutes_to_carryover_.py  55c47cfedecb_add_secrets_table.py  5ee9b89f14b3_add_bonuses_table.py  77e62b90ce6e_seed_bonus_fund.py  8a42871ab398_initial.py  8c14fc7de7b9_remove_penalty_applied_from_grades.py  8cf801318955_add_family_language_config.py  a0868a9c8f93_initial.py  a1b2c3d4e5f6_extract_school_table.py  a5ceb6f55dea_add_birth_date_to_family_members.py  b491c39a36b3_add_book_id_to_homeworks.py  b7c27289edc4_add_escalated_at_to_grades.py  b92c3c323049_add_source_field_to_grades.py  bc97c235ffa3_bonus_nullable_homework_add_reason.py  c196e5e3bfed_initial.py  c2ee4c0ee174_add_fund_id_to_bonus_tasks.py  c600790c0eef_remove_penalty_applied_from_homeworks.py  c71204c6bdfd_add_current_book_id_to_subjects.py  cd1012057b20_add_contents_path_to_books.py  d19fd2fa81b3_add_original_value_to_grades.py  d65309f12f28_add_sync_providers_table.py  (+6 more)
tests/: conftest.py  test_bonus.py  test_bonus_task.py  test_family_member.py  test_gateway.py  test_homework.py  test_sync_provider.py  test_tool_names.py  test_week_calculation.py  test_week_preview.py
(+78 files in other folders)
